fixed block comment format

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,4 +1,5 @@
 <!--     
+    Github link: https://github.com/mattf4171/WeatherAPI
     Course: CST 205
     Title: Weather API Project
     Abstract: This program will allow the user to input a city and will give back the temperature at that location.
